syntax = "proto3";

package auth.service.health.v1;

option go_package = "api/auth/v1/proto";

import "google/api/annotations.proto";

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/v1/health"
    };
  }
  
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse) {
    option (google.api.http) = {
      get: "/v1/health/watch"
    };
  }
}
